--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-cayman
+title: CarbonGeoScales
+description: A framework for standardizing GHGs emissions open data at multiple geographical scales.
